syntax = "proto3";

package holms.types.supply.room_types;
option csharp_namespace = "HOLMS.Types.Supply.RoomTypes";
option go_package = "supply/roomtypes";

import "primitive/uuid.proto";

message RoomTypeIndicator {
	holms.types.primitive.Uuid id = 1;
}
